@@ -1,5 +1,6 @@
+
 /*
- * Copyright (c) 2006, 2015, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,28 +22,5 @@
  * questions.
  */
 
-/*
- * @test
- * @bug 4733558 6471539
- * @summary Tests Date encoding
- * @run main/othervm -Djava.security.manager=allow java_sql_Date
- * @author Sergey Malenkov
- * @modules java.desktop
- *          java.sql
- */
-
-import java.sql.Date;
-
-public final class java_sql_Date extends AbstractTest<Date> {
-    public static void main(String[] args) {
-        new java_sql_Date().test(true);
-    }
-
-    protected Date getObject() {
-        return new Date(System.currentTimeMillis());
-    }
-
-    protected Date getAnotherObject() {
-        return new Date(0L);
-    }
+module test {
 }
